# EncryptionApp

./: App.cpp  App.h  CMakeLists.txt  README  localDB_script_1-0-0.sql.sql  main.cpp
